--- a/mobile.css
+++ b/mobile.css
@@ -22,11 +22,8 @@ section header {
     
     width: 92%;
 }
-section .main .SearchBox .search {
-    
-    padding: 12px;
-    padding-left: 45px;
-    padding-right: 60px;
+section .main .SearchBox .search{
+    padding: 12px 60px 12px 45px;
 }
 section footer .row2 ul li a {
    
